--- a/Repaso/scss/main.scss
+++ b/Repaso/scss/main.scss
@@ -1,8 +1,32 @@
 /* variables: */
 $font-pack:'Lexend', sans-serif;
 
+@mixin circle-shadow{
+    width: 100px;
+    height: 100px;
+    background-color: gray;
+    border-radius: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+@mixin circle{
+    width: 100px;
+    height: 100px;
+    background-color: #D9AFD9;
+    background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+    border-radius: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
-
+@mixin square{
+    width: 100px;
+    height: 100px;
+    background-color: #D9AFD9;
+    background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 
 *{
@@ -22,14 +46,58 @@ html{
     background-color: #4158D0;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     border-radius: 50%;
+    margin-bottom: 20px;
     &:hover{
         transform: translateX(20px); /* si le saco la coordenada es valor por defecto es X */
     }
 }
+
 .shadow{
     width: 100px;
     height: 100px;
-    background-color: lightslategray;
+    background-color: gray;
     border-radius: 50%;
+    margin-bottom: 20px;
 }
+
+.shadow-2{
+    @include circle-shadow();
+    margin-left: 20px;
+}
+.circle-2{
+    @include circle();
+    
+    &:hover{
+        transform: scale(0.5, 1.2);
+    }
+}
+.circle-3{
+    @include circle();
+    
+    &:hover{
+        transform: skew(20deg);
+    }
+}
+
+.square{
+    @include square();
+    margin-left: 20px;
+    &:hover{
+        transform: rotate(45deg);
+    }
+}
+.square-2{
+    @include square();
+    margin-left: 20px;
+    transform-origin: left top;
+    &:hover{
+        transform: rotate(-40deg);
+    }
+}
+
+
+
+
+
+
 
