--- a/Repaso/scss/main.scss
+++ b/Repaso/scss/main.scss
@@ -28,6 +28,10 @@ $font-pack:'Lexend', sans-serif;
     margin-bottom: 20px;
 }
 
+@mixin transitionScale($time){
+    transition: transform $time;
+}
+
 
 *{
     box-sizing: border-box;
@@ -94,6 +98,146 @@ html{
         transform: rotate(-40deg);
     }
 }
+
+.container-1{
+    position: relative;
+    perspective: 100px;
+    @include circle();
+    .item-1{
+        @include square();
+        margin-left: 20px;
+        opacity: 0.5;
+        position: absolute;
+        transform-style: preserve-3d;
+        transform: rotateY(30deg);
+    }
+}
+
+.card{
+  width: 200px;
+  height: 300px;
+  transform-style: preserve-3d;
+  position:relative;
+  margin-top: 40px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  &:hover{
+    transform: rotateY(180deg);
+  }
+  .face{
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    
+  }
+  .front{
+    background: pink;     
+}
+.back{
+    background: lightblue;
+    transform: rotateX(180deg);
+}
+}
+
+.parallax-container{
+    width: 100%;
+    height: 100vh;
+    perspective: 8px;
+    perspective-origin: 50%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: relative;
+
+}
+
+
+.imagepreset{
+    position: absolute;
+    /* centrar elementos */
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    transform: 0 50%;
+}
+.image-background{
+    height: auto;
+    width: 100%;
+    transform: translateZ(0px) scale(1);
+    transform-origin: 0 50%;
+}
+
+.image-middle{
+   height: 100%;
+   width: 100%;
+   transform: translateZ(5px) scale(0.375);
+   transform-origin:50%;
+   
+}
+
+.image-foreground{
+    transform: translateZ(2px) scale(0.75);
+   transform-origin: top;
+}
+
+.card-placeholder{
+    border-radius: 5px;
+    background: whitesmoke;
+    background-image: url(../../images/pockercard.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width:130px;
+    height:200px;
+    position: absolute;
+    transform: rotate(-20px);
+}
+.one{
+    left:30%; 
+    top: 20%;   
+}
+.two{
+    left: 60%;
+    bottom:20%
+}
+
+.three{
+    left: 10%;
+    bottom: -50%;
+}
+
+.box-container{
+    width: 400px;
+    height: 100px;
+    margin-bottom: 30px;
+    background: lightblue;
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+    &:hover{
+        .box{
+            transform: scale(1.2);
+        }
+    }
+}
+.box{
+    width: 100px;
+    height: 100px;
+
+}
+.box-1{
+    background: lightpink;
+    @include transitionScale(500ms);
+}
+.box-2{
+    background: lightcoral;
+    @include transitionScale(1s);
+}
+.box-3{
+    background: lightseagreen;
+    @include transitionScale(1.5s);
+}
+
 
 
 
