--- a/Repaso/scss/main.scss
+++ b/Repaso/scss/main.scss
@@ -238,10 +238,52 @@ html{
     @include transitionScale(1.5s);
 }
 
+.circle-smooth{
+    @include circle();
+    &:hover{
+        transform: translateX(20px);
+        @include transitionScale(0.5s);
+    }
+}
 
+.container-ttf{
+    &:hover{
+        .timing-circle{
+            transform: translateX(500px);
+        }
+        
+    }
+}
+.timing-circle{
+    @include circle();
 
+}
+.t1{
+    transition: transform 0.5s linear;
+    transition-delay: 0.1s;
+}
 
+.t2{
+    transition: transform 0.5s ease;
+    transition-delay: 0.1s;
+}
 
+.t3{
+    transition: transform 0.5s ease-in;
+    transition-delay: 0.1s;
+}
 
+.t4{
+    transition: transform 0.5s ease-out;
+    transition-delay: 0.1s;
+}
 
+.t5{
+    transition: transform 0.5s ease-in-out;
+    transition-delay: 0.1s;
+}
 
+.t6{
+    transition: transform 0.5s cubic-bezier(1,.03,.86,.27);
+    transition-delay: 0.1s;
+}
